--- a/src/components/custom-form-inputs.scss
+++ b/src/components/custom-form-inputs.scss
@@ -80,13 +80,15 @@
 }
 
 .custom-control-label {
+  display: flex;
+  align-items: center;
   margin-bottom: 0;
 }
 
 .custom-control-label::before {
   position: absolute;
   top: 0;
-  left: -1.5rem;
+  left: 0;
   display: block;
   width: 1rem;
   height: 1rem;
@@ -99,7 +101,7 @@
 .custom-control-label::after {
   position: absolute;
   top: 0;
-  left: -1.5rem;
+  left: 0;
   display: block;
   width: 1rem;
   height: 1rem;
