--- a/src/components/progress-display/progress-display-styles.scss
+++ b/src/components/progress-display/progress-display-styles.scss
@@ -67,12 +67,6 @@ circle {
   transition: stroke-dashoffset 0.6s ease;
 }
 
-svg {
-  transform: rotate(-90deg);
-  width: 100%;
-  height: 100%;
-}
-
 .progress-circular {
   position: relative;
   display: inline-flex;
@@ -83,6 +77,12 @@ svg {
 
 .v-progress-circular {
   margin: 1rem;
+}
+
+.progress-circular svg {
+  transform: rotate(-90deg);
+  width: 100%;
+  height: 100%;
 }
 
 .progress-circular > svg {
