time picker component and input group updates

--- a/src/components/input-field/input-field-styles.scss
+++ b/src/components/input-field/input-field-styles.scss
@@ -282,6 +282,7 @@
   line-height: 1.5 !important;
   border-radius: 0.2rem !important;
   min-height: 0px !important;
+  max-height: 28px !important;
 }
 
 .basic-input-lg {
