--- a/src/components/plumage-input-group/plumage-input-group-styles.scss
+++ b/src/components/plumage-input-group/plumage-input-group-styles.scss
@@ -210,7 +210,7 @@ $tp-dropdown-z: 10000;
     .input-group-sm .clear-button {
       min-height: 28px;
       font-size: 0.875rem;
-      padding: 0.1rem 0.3rem 0 0 !important;
+      padding: 0.1rem 0.3rem 0 0.3rem !important;
     }
 
     /* =========================
