--- a/src/components/plumage-input-field/plumage-input-field-styles.scss
+++ b/src/components/plumage-input-field/plumage-input-field-styles.scss
@@ -34,7 +34,7 @@
   }
 
   label {
-    font-size: 0.75rem;
+    // font-size: 0.75rem;
     position: relative;
   }
 
@@ -45,9 +45,15 @@
     padding-top: 12px;
   }
 
+  .inline .form-control-label,
+  .horizontal .form-control-label {
+    align-items: start !important;
+    padding-top: 3px !important;
+  }
+
   .form-group .form-control-label,
   .form-group label {
-    font-size: 0.75rem;
+    // font-size: 0.75rem;
     font-weight: 400;
     line-height: 1.1;
     margin-bottom: 0;
@@ -65,7 +71,7 @@
     font-weight: 400;
     line-height: 1.2;
     /* height: calc(1.2em + 0.75rem); */
-    padding: 0.375rem 0.5rem;
+    padding: 0.175rem 0.5rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     width: 100%;
   }
@@ -146,6 +152,7 @@
   .invalid.b-underline,
   .invalid.b-focus {
     background-color: #b30009;
+    height: 1px;
   }
 
   .form-control:invalid,
