--- a/src/components/datepicker/datepicker-styles.scss
+++ b/src/components/datepicker/datepicker-styles.scss
@@ -546,6 +546,10 @@
     font-size: 80%;
   }
 
+  .col-form-label {
+    font-size: 0.75rem;
+  }
+
   .form-control {
     display: block;
     width: 100%;
