--- a/src/components/datepicker/datepicker-styles.scss
+++ b/src/components/datepicker/datepicker-styles.scss
@@ -609,9 +609,15 @@
   }
 
   .ok-button {
-    text-align: right;
+    justify-content: flex-end;
+    display: flex;
+    align-items: center;
     padding: 0 5px;
     width: 100%;
+
+    .btn {
+      margin: 3px 0;
+    }
   }
 
   .ok-button .btn {
@@ -936,7 +942,8 @@
     border-radius: 0 !important;
   }
 
-  .selected-range-active {
+  .selected-range-active, .selected-range-active .focus,
+  .selected-range-active span:focus {
     color: rgb(255, 255, 255) !important;
     background-color: rgb(0, 98, 204);
   }
